<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerTareaActivity">


    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatButtonVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        app:backgroundTint="#FF0000"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/_2"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="15dp"
            android:background="#FF0000"
            android:text="@string/titulo"
            android:textAlignment="textEnd"
            android:textSize="48sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#FFFFFF"
            android:text="@string/fecha"
            android:textSize="34sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="490dp"
            android:layout_margin="15dp"
            android:background="#FFFFFF"
            android:text="@string/descripciontarea"
            android:textSize="34sp" />

    </LinearLayout>

</FrameLayout>
